src/objects/Metadata_Auto_Communication__c.object
<CustomObject>
    <description>Describes consumer-facing communications that can be generated automatically, either as an email or a fulfillment order.  These include Medical Questionnaire reminders, Product Return reminders, and Fraud Case notifications.</description>
    <fields>
        <fullName>Attempt__c</fullName>
        <label>Attempt</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment_Code_List__c</fullName>
        <description>Comma-separated list of comment codes</description>
        <inlineHelpText>For Product Returns, the comment code(s) this applies to. Comma-separated list of comment codes.</inlineHelpText>
        <label>Comment Code List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Name__c</fullName>
        <inlineHelpText>Use the Template Unique Name from the Email Communication Template.</inlineHelpText>
        <label>Template Unique Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fulfillment Item</label>
        <referenceTo>Fulfillment_Item__c</referenceTo>
        <relationshipLabel>Metadata Auto Communication</relationshipLabel>
        <relationshipName>Metadata_Auto_Communication</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Generate_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, fulfillment orders generated from this MAC will automatically generate a PDF.</description>
        <inlineHelpText>If checked, fulfillment orders generated from this MAC will automatically generate a PDF.</inlineHelpText>
        <label>Generate PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Product_Path__c</fullName>
        <inlineHelpText>For Product Returns, the Product Path this applies to.</inlineHelpText>
        <label>Global Product Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Contact_Center__c</fullName>
        <formula>TEXT( Fulfillment_Item__r.Contact_Center__c )</formula>
        <label>Item Contact Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Country__c</fullName>
        <formula>TEXT( Fulfillment_Item__r.Contact_Country__c )</formula>
        <label>Item Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Language__c</fullName>
        <formula>TEXT(Fulfillment_Item__r.Contact_Language__c)</formula>
        <label>Item Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metadata_Communication_Details__c</fullName>
        <label>Metadata Communication Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Query_Type__c</fullName>
        <inlineHelpText>Select type of query for MAC.</inlineHelpText>
        <label>Query Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Segment</fullName>
                </value>
                <value>
                    <fullName>Product Path</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <inlineHelpText>For Product Returns, the Product Segment this applies to. Enter &quot;/&quot; sparated list of segments from Global Product</inlineHelpText>
        <label>Global Product Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Return Reminder</fullName>
                </value>
                <value>
                    <fullName>Fraud Notice</fullName>
                </value>
                <value>
                    <fullName>Medical Questionnaire</fullName>
                </value>
                <value>
                    <fullName>Product Return</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Metadata Auto Communication</label>
    <listViews>
        <fullName>AA</fullName>
        <columns>NAME</columns>
        <columns>Fulfillment_Item__c</columns>
        <columns>Segment__c</columns>
        <columns>Item_Country__c</columns>
        <columns>Item_Language__c</columns>
        <columns>Item_Contact_Center__c</columns>
        <columns>Attempt__c</columns>
        <columns>Type__c</columns>
        <columns>Generate_PDF__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Query_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Country__c</field>
            <operation>equals</operation>
            <value>indonesia,Australia,New Zealand,Singapore,Thailand,Vietnam</value>
        </filters>
        <label>AA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AA_Reminders</fullName>
        <columns>NAME</columns>
        <columns>Fulfillment_Item__c</columns>
        <columns>Segment__c</columns>
        <columns>Item_Country__c</columns>
        <columns>Item_Language__c</columns>
        <columns>Item_Contact_Center__c</columns>
        <columns>Attempt__c</columns>
        <columns>Type__c</columns>
        <columns>Generate_PDF__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Query_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Country__c</field>
            <operation>equals</operation>
            <value>indonesia,Australia,New Zealand,Singapore,Thailand,Vietnam</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Product Return Reminder</value>
        </filters>
        <label>AA Reminders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Generate_PDF__c</columns>
        <columns>NAME</columns>
        <columns>Query_Type__c</columns>
        <columns>Global_Product_Path__c</columns>
        <columns>Item_Country__c</columns>
        <columns>Segment__c</columns>
        <columns>Fulfillment_Item__c</columns>
        <columns>Item_Language__c</columns>
        <columns>Comment_Code_List__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Always_Discreet_Pads_Temp_Prod_Returns</fullName>
        <columns>NAME</columns>
        <columns>Item_Country__c</columns>
        <columns>Item_Language__c</columns>
        <columns>Comment_Code_List__c</columns>
        <columns>Global_Product_Path__c</columns>
        <columns>Metadata_Communication_Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Product Return</value>
        </filters>
        <filters>
            <field>Query_Type__c</field>
            <operation>equals</operation>
            <value>Product Path</value>
        </filters>
        <filters>
            <field>Metadata_Communication_Details__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Global_Product_Path__c</field>
            <operation>contains</operation>
            <value>Always/Heavy Adult Incontinence</value>
        </filters>
        <label>*Always Discreet Temporary Prod Returns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Always_Liners_Temporary_Product_Return</fullName>
        <columns>NAME</columns>
        <columns>Item_Country__c</columns>
        <columns>Item_Language__c</columns>
        <columns>Comment_Code_List__c</columns>
        <columns>Global_Product_Path__c</columns>
        <columns>Metadata_Communication_Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Product Return</value>
        </filters>
        <filters>
            <field>Query_Type__c</field>
            <operation>contains</operation>
            <value>Product Path</value>
        </filters>
        <filters>
            <field>Metadata_Communication_Details__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Global_Product_Path__c</field>
            <operation>contains</operation>
            <value>Always/Liners/Thin</value>
        </filters>
        <label>*Always Liners Temporary Product Return</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Argentina</fullName>
        <columns>NAME</columns>
        <columns>Segment__c</columns>
        <columns>Fulfillment_Item__c</columns>
        <columns>Item_Country__c</columns>
        <columns>Item_Language__c</columns>
        <columns>Attempt__c</columns>
        <columns>Type__c</columns>
        <columns>Generate_PDF__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Country__c</field>
            <operation>equals</operation>
            <value>Argentina</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Product Return</value>
        </filters>
        <label>Argentina</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Australia</fullName>
        <columns>NAME</columns>
        <columns>Fulfillment_Item__c</columns>
        <columns>Segment__c</columns>
        <columns>Item_Country__c</columns>
        <columns>Item_Language__c</columns>
        <columns>Item_Contact_Center__c</columns>
        <columns>Attempt__c</columns>
        <columns>Type__c</columns>
        <columns>Generate_PDF__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Query_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <label>Australia</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Austria</fullName>
        <columns>NAME</columns>
        <columns>Fulfillment_Item__c</columns>
        <columns>Segment__c</columns>
        <columns>Item_Country__c</columns>
        <columns>Item_Language__c</columns>
        <columns>Attempt__c</columns>
        <columns>Type__c</columns>
        <columns>Generate_PDF__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Country__c</field>
            <operation>equals</operation>
            <value>Austria</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Product Return</value>
        </filters>
        <label>Austria</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Belgium_Flemish</fullName>
        <columns>NAME</columns>
        <columns>Fulfillment_Item__c</columns>
        <columns>Segment__c</columns>
        <columns>Item_Country__c</columns>
        <columns>Item_Language__c</columns>
        <columns>Item_Contact_Center__c</columns>
        <columns>Attempt__c</columns>
        <columns>Type__c</columns>
        <columns>Generate_PDF__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Query_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Country__c</field>
            <operation>equals</operation>
            <value>Belgium</value>
        </filters>
        <filters>
            <field>Item_Language__c</field>
            <operation>equals</operation>
            <value>flemish</value>
        </filters>
        <label>Belgium Flemish</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Belgium_French</fullName>
        <columns>NAME</columns>
        <columns>Fulfillment_Item__c</columns>
        <columns>Segment__c</columns>
        <columns>Item_Country__c</columns>
        <columns>Item_Language__c</columns>
        <columns>Item_Contact_Center__c</columns>
        <columns>Attempt__c</columns>
        <columns>Type__c</columns>
        <columns>Generate_PDF__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Query_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Country__c</field>
            <operation>equals</operation>
            <value>Belgium</value>
        </filters>
        <filters>
            <field>Item_Language__c</field>
            <operation>equals</operation>
            <value>French</value>
        </filters>
        <label>Belgium French</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brazil</fullName>
        <columns>NAME</columns>
        <columns>Fulfillment_Item__c</columns>
        <columns>Segment__c</columns>
        <columns>Item_Country__c</columns>
        <columns>Item_Language__c</columns>
        <columns>Attempt__c</columns>
        <columns>Type__c</columns>
        <columns>Generate_PDF__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Country__c</field>
            <operation>equals</operation>
            <value>brazil</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Product Return</value>
        </filters>
        <label>Brazil</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cascade</fullName>
        <columns>NAME</columns>
        <columns>Item_Country__c</columns>
        <columns>Item_Language__c</columns>
        <columns>Comment_Code_List__c</columns>
        <columns>Global_Product_Path__c</columns>
        <columns>Metadata_Communication_Details__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Product Return</value>
        </filters>
        <filters>
            <field>Query_Type__c</field>
            <operation>contains</operation>
            <value>Product Path</value>
        </filters>
        <filters>
            <field>Metadata_Communication_Details__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Global_Product_Path__c</field>
            <operation>contains</operation>
            <value>Cascade</value>
        </filters>
        <label>*Cascade Auto Dish Pacs Temp Prod Return</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Chile</fullName>
        <columns>NAME</columns>
        <columns>Fulfillment_Item__c</columns>
        <columns>Segment__c</columns>
        <columns>Item_Country__c</columns>
        <columns>Item_Language__c</columns>
        <columns>Attempt__c</columns>
        <columns>Type__c</columns>
        <columns>Generate_PDF__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Country__c</field>
            <operation>equals</operation>
            <value>Chile</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Product Return</value>
        </filters>
        <label>Chile</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>China</fullName>
        <columns>NAME</columns>
        <columns>Fulfillment_Item__c</columns>
        <columns>Segment__c</columns>
        <columns>Item_Country__c</columns>
        <columns>Item_Language__c</columns>
        <columns>Item_Contact_Center__c</columns>
        <columns>Attempt__c</columns>
        <columns>Type__c</columns>
        <columns>Generate_PDF__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Query_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Country__c</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <label>China</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Colombia</fullName>
        <columns>NAME</columns>
        <columns>Fulfillment_Item__c</columns>
        <columns>Segment__c</columns>
        <columns>Item_Country__c</columns>
        <columns>Item_Language__c</columns>
        <columns>Attempt__c</columns>
        <columns>Type__c</columns>
        <columns>Generate_PDF__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Item_Country__c</field>
            <operation>equals</operation>
            <value>Colombia</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Product Return</value>
        </filters>
        <label>Colombia</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MAC-{000000}</displayFormat>
        <label>Metadata Auto Communication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Auto Communications</pluralLabel>
    <recordTypes>
        <fullName>Fraud</fullName>
        <active>true</active>
        <description>Used for the Fraud process</description>
        <label>Fraud</label>
    </recordTypes>
    <recordTypes>
        <fullName>Medical_QR</fullName>
        <active>true</active>
        <description>Used for Medical QR process</description>
        <label>Medical QR</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Return</fullName>
        <active>true</active>
        <description>Used for initial Product Returns</description>
        <label>Product Return</label>
    </recordTypes>
    <recordTypes>
        <fullName>Return_Reminder</fullName>
        <active>true</active>
        <description>Used for the Return Reminder Process</description>
        <label>Return Reminder</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>